--- a/GallucciNahuel/codigo/html/comoCurarTuEssen.html
+++ b/GallucciNahuel/codigo/html/comoCurarTuEssen.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/GallucciNahuel/codigo/css/estilos.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="/index.css">    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap" rel="stylesheet">
     <link rel="icon" href="/GallucciNahuel/imagenes/logos/marca/Logos Essen_Negro.png">
