--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="navBar">
                 <img src="/GallucciNahuel/imagenes/logos/marca/Logos Essen_Negro.png" alt="Logo de Essen">
                 <ul class="navBar-list">
-                    <li><a href="/index.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="/GallucciNahuel/codigo/html/productos.html">Productos</a></li>
                     <li><a href="/GallucciNahuel/codigo/html/recetas.html">Recetas</a></li>
                     <li><a href="/GallucciNahuel/codigo/html/blog.html">Blog</a></li>
