--- a/index.html
+++ b/index.html
@@ -8,54 +8,54 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap" rel="stylesheet">
-    <link rel="icon" href="/imagenes/logos/marca/Logos Essen_Negro.png">
+    <link rel="icon" href="/GallucciNahuel/imagenes/logos/marca/Logos Essen_Negro.png">
     <title>TodoALaEssen</title>
 </head>
 <body>
     <div id="mainGrid">
         <header id="nav">
             <div class="navBar">
-                <img src="/imagenes/logos/marca/Logos Essen_Negro.png" alt="Logo de Essen">
+                <img src="/GallucciNahuel/imagenes/logos/marca/Logos Essen_Negro.png" alt="Logo de Essen">
                 <ul class="navBar-list">
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="/codigo/html/productos.html">Productos</a></li>
-                    <li><a href="/codigo/html/recetas.html">Recetas</a></li>
-                    <li><a href="/codigo/html/blog.html">Blog</a></li>
-                    <li><a href="/codigo/html/sobreMi.html">Sobre Mi</a></li>
+                    <li><a href="/GallucciNahuel/codigo/html/productos.html">Productos</a></li>
+                    <li><a href="/GallucciNahuel/codigo/html/recetas.html">Recetas</a></li>
+                    <li><a href="/GallucciNahuel/codigo/html/blog.html">Blog</a></li>
+                    <li><a href="/GallucciNahuel/codigo/html/sobreMi.html">Sobre Mi</a></li>
                 </ul>
             </div>
         </header>
         <main id="main">
             <section>
                 <article>
-                        <img src="/imagenes/banners/Volvimos.png" alt="banner1" class="banner">
+                        <img src="/GallucciNahuel/imagenes/banners/Volvimos.png" alt="banner1" class="banner">
                 </article>
 
                 <article class="cardContainer">
                     <div class="card">
                         <h3 class="cardText">Envios a todo el pais</h3>
-                        <img src="/imagenes/logos/misc/truck.png" alt="envios a todo el pais">
+                        <img src="/GallucciNahuel/imagenes/logos/misc/truck.png" alt="envios a todo el pais">
                     </div>
                     <div class="card">
                         <h3 class="cardText">Productos originales</h3>
-                        <img src="/imagenes/logos/misc/best-price.png" alt="productos originales">
+                        <img src="/GallucciNahuel/imagenes/logos/misc/best-price.png" alt="productos originales">
                     </div>
                     <div class="card">
                         <h3 class="cardText">Asesoramiento Profesional</h3>
-                        <img src="/imagenes/logos/misc/handshake.png" alt="Asesoramiento Profesional">
+                        <img src="/GallucciNahuel/imagenes/logos/misc/handshake.png" alt="Asesoramiento Profesional">
                     </div>
                     <div class="card">
                         <h3 class="cardText">Plan canje</h3>
-                        <img src="/imagenes/logos/misc/plancanje.png" alt="Plan canje">
+                        <img src="/GallucciNahuel/imagenes/logos/misc/plancanje.png" alt="Plan canje">
                     </div>
                     <div class="card">
                         <h3 class="cardText">Sumate a mi equipo</h3>
-                        <img src="/imagenes/logos/misc/mitiendaoficial_4b740916-f361-491d-bf3c-e344f692bd87.png" alt="Sumate a mi equipo">
+                        <img src="/GallucciNahuel/imagenes/logos/misc/mitiendaoficial_4b740916-f361-491d-bf3c-e344f692bd87.png" alt="Sumate a mi equipo">
                     </div>
                 </article>
                         
                 <article>
-                    <img src="/imagenes/banners/ESSEN (136 de 260).jpg" alt="banner2" class="banner">
+                    <img src="/GallucciNahuel/imagenes/banners/ESSEN (136 de 260).jpg" alt="banner2" class="banner">
                 </article>
             </section> 
            <div class="formContainer">
@@ -82,13 +82,13 @@
                     Seguime en  mis Redes!
                 </h2>
                 <div class="links">
-                    <a href="https://www.facebook.com" target="_blank"><img src="/imagenes/logos/redes sociales/facebook.png" alt="facebook" class="imgLink"></a>
+                    <a href="https://www.facebook.com" target="_blank"><img src="/GallucciNahuel/imagenes/logos/redes sociales/facebook.png" alt="facebook" class="imgLink"></a>
 
-                    <a href="https://www.twitter.com" target="_blank"><img src="/imagenes/logos/redes sociales/twiter.png" alt="twiter" class="imgLink"></a>
+                    <a href="https://www.twitter.com" target="_blank"><img src="/GallucciNahuel/imagenes/logos/redes sociales/twiter.png" alt="twiter" class="imgLink"></a>
 
-                    <a href="https://www.instagram.com" target="_blank"><img src="/imagenes/logos/redes sociales/instagram.png" alt="instagram" class="imgLink"></a>
+                    <a href="https://www.instagram.com" target="_blank"><img src="/GallucciNahuel/imagenes/logos/redes sociales/instagram.png" alt="instagram" class="imgLink"></a>
 
-                    <a href="https://www.whatsapp.com" target="_blank"><img src="/imagenes/logos/redes sociales/whatsapp.png" alt="whatsapp" class="imgLink"></a>          
+                    <a href="https://www.whatsapp.com" target="_blank"><img src="/GallucciNahuel/imagenes/logos/redes sociales/whatsapp.png" alt="whatsapp" class="imgLink"></a>          
             </div>
             </div>
             <div class="copy">
