--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="mainGrid">
         <header id="nav">
             <div class="navBar">
-                <img src="/GallucciNahuel/imagenes/logos/marca/Logos Essen_Negro.png" alt="Logo de Essen">
+                <img src="GallucciNahuel/imagenes/logos/marca/Logos Essen_Negro.png" alt="Logo de Essen">
                 <ul class="navBar-list">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="GallucciNahuel/html/productos.html">Productos</a></li>
@@ -42,7 +42,7 @@
                     </div>
                     <div class="card">
                         <h3 class="cardText">Asesoramiento Profesional</h3>
-                        <img src=GallucciNahuel/imagenes/logos/misc/handshake.png" alt="Asesoramiento Profesional">
+                        <img src="GallucciNahuel/imagenes/logos/misc/handshake.png" alt="Asesoramiento Profesional">
                     </div>
                     <div class="card">
                         <h3 class="cardText">Plan canje</h3>
