--- a/GallucciNahuel/html/productos.html
+++ b/GallucciNahuel/html/productos.html
@@ -30,36 +30,36 @@
                     Productos
                 </h1>
                 <div class="table">
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
-                    <div class="celda"><img src="/GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
                 </div>
             </article>
         </main>
@@ -69,13 +69,13 @@
                     Seguime en  mis Redes!
                 </h2>
                 <div class="links">
-                    <a href="https://www.facebook.com" target="_blank"><img src="/GallucciNahuel/imagenes/logos/redes sociales/facebook.png" alt="facebook" class="imgLink"></a>
+                    <a href="https://www.facebook.com" target="_blank"><img src="../../GallucciNahuel/imagenes/logos/redes sociales/facebook.png" alt="facebook" class="imgLink"></a>
 
-                    <a href="https://www.twitter.com" target="_blank"><img src="/GallucciNahuel/imagenes/logos/redes sociales/twiter.png" alt="twiter" class="imgLink"></a>
+                    <a href="https://www.twitter.com" target="_blank"><img src="../..//GallucciNahuel/imagenes/logos/redes sociales/twiter.png" alt="twiter" class="imgLink"></a>
 
-                    <a href="https://www.instagram.com" target="_blank"><img src="/GallucciNahuel/imagenes/logos/redes sociales/instagram.png" alt="instagram" class="imgLink"></a>
+                    <a href="https://www.instagram.com" target="_blank"><img src="../..//GallucciNahuel/imagenes/logos/redes sociales/instagram.png" alt="instagram" class="imgLink"></a>
 
-                    <a href="https://www.whatsapp.com" target="_blank"><img src="/GallucciNahuel/imagenes/logos/redes sociales/whatsapp.png" alt="whatsapp" class="imgLink"></a>          
+                    <a href="https://www.whatsapp.com" target="_blank"><img src="../..//GallucciNahuel/imagenes/logos/redes sociales/whatsapp.png" alt="whatsapp" class="imgLink"></a>          
             </div>
             </div>
             <div class="copy">
