--- a/GallucciNahuel/html/blog.html
+++ b/GallucciNahuel/html/blog.html
@@ -4,25 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="../../index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap" rel="stylesheet">
-    <link rel="icon" href="/GallucciNahuel/imagenes/logos/marca/Logos Essen_Negro.png">
+    <link rel="icon" href="../imagenes/logos/marca/Logos Essen_Negro.png">
     <title>TodoALaEssen</title>
 </head>
 <body>
     <div id="mainGrid">
         <header id="nav">
             <div class="navBar">
-                <img src="/GallucciNahuel/imagenes/logos/marca/Logos Essen_Negro.png" alt="Logo de Essen">
+                <img src="../../GallucciNahuel/imagenes/logos/marca/Logos Essen_Negro.png" alt="Logo de Essen">
                 <ul class="navBar-list">
-                    <li><a href="/index.html">Inicio</a></li>
-                    <li><a href="/GallucciNahuel/codigo/html/productos.html">Productos</a></li>
-                    <li><a href="/GallucciNahuel/codigo/html/recetas.html">Recetas</a></li>
-                    <li><a href="/GallucciNahuel/codigo/html/blog.html">Blog</a></li>
-                    <li><a href="/GallucciNahuel/codigo/html/sobreMi.html">Sobre Mi</a></li>
-                </ul>
+                    <li><a href="../../index.html">Inicio</a></li>
+                    <li><a href="../../GallucciNahuel/html/productos.html">Productos</a></li>
+                    <li><a href="../../GallucciNahuel/html/recetas.html">Recetas</a></li>
+                    <li><a href="../../GallucciNahuel/html/blog.html">Blog</a></li>
+                    <li><a href="../../GallucciNahuel/html/sobreMi.html">Sobre Mi</a></li>
             </div>
         </header>
         <main id="main">
