--- a/GallucciNahuel/html/productos.html
+++ b/GallucciNahuel/html/productos.html
@@ -30,36 +30,37 @@
                     Productos
                 </h1>
                 <div class="table">
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
-                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
+                    <div class="celda"><img src="../../GallucciNahuel/imagenes/productos/bazar premium/SET UTENSILIOS DE USO GENERAL ROSA.png" alt=""></div>
                 </div>
             </article>
         </main>
