--- a/GallucciNahuel/html/comoCurarTuEssen.html
+++ b/GallucciNahuel/html/comoCurarTuEssen.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="../../index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap" rel="stylesheet">
-    <link rel="icon" href="/GallucciNahuel/imagenes/logos/marca/Logos Essen_Negro.png">
+    <link rel="icon" href="../imagenes/logos/marca/Logos Essen_Negro.png">
     <title>TodoALaEssen</title>
 </head>
 <body>
-    <header>
-        <div class="navBar">
-            <img src="/GallucciNahuel/imagenes/logos/marca/Logos Essen_Negro.png" alt="Logo de Essen">
-            <ul class="navBar-list">
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/GallucciNahuel/codigo/html/productos.html">Productos</a></li>
-                <li><a href="/GallucciNahuel/codigo/html/recetas.html">Recetas</a></li>
-                <li><a href="/GallucciNahuel/codigo/html/blog.html">Blog</a></li>
-                <li><a href="/GallucciNahuel/codigo/html/sobreMi.html">Sobre Mi</a></li>
-            </ul>
-        </div>
-    </header>
+    <div id="mainGrid">
+        <header id="nav">
+            <div class="navBar">
+                <img src="../../GallucciNahuel/imagenes/logos/marca/Logos Essen_Negro.png" alt="Logo de Essen">
+                <ul class="navBar-list">
+                    <li><a href="../../index.html">Inicio</a></li>
+                    <li><a href="../../GallucciNahuel/html/productos.html">Productos</a></li>
+                    <li><a href="../../GallucciNahuel/html/recetas.html">Recetas</a></li>
+                    <li><a href="../../GallucciNahuel/html/blog.html">Blog</a></li>
+                    <li><a href="../../GallucciNahuel/html/sobreMi.html">Sobre Mi</a></li>
+            </div>
+        </header>
     <main>
         <h1 class="titulo">Como curar tus Essen</h1>
         <section>
