--- a/GallucciNahuel/html/blog.html
+++ b/GallucciNahuel/html/blog.html
@@ -31,7 +31,7 @@
             <section class="blogCardContainer">   
                 <div class="cardBlog">
                     <h2 class="blogCardTexto">
-                        <a href="/GallucciNahuel/codigo/html/comoCurarTuEssen.html" target="_blank">Como curar tus Essen
+                        <a href="../../GallucciNahuel/codigo/html/comoCurarTuEssen.html" target="_blank">Como curar tus Essen
                         </a>
                     </h2>
                     <div class="cardBlogImagen">
@@ -40,7 +40,7 @@
     
                 <div class="cardBlog">
                     <h2 class="blogCardTexto">
-                        <a href="/GallucciNahuel/codigo/html/HistoriaDeEssen.html" target="_BLANK">Historia de Essen
+                        <a href="../../GallucciNahuel/codigo/html/HistoriaDeEssen.html" target="_BLANK">Historia de Essen
                         </a>
                     </h2>
                     <div class="cardBlogImagen">
@@ -55,13 +55,13 @@
                     Seguime en  mis Redes!
                 </h2>
                 <div class="links">
-                    <a href="https://www.facebook.com" target="_blank"><img src="/GallucciNahuel/imagenes/logos/redes sociales/facebook.png" alt="facebook" class="imgLink"></a>
+                    <a href="https://www.facebook.com" target="_blank"><img src="../../GallucciNahuel/imagenes/logos/redes sociales/facebook.png" alt="facebook" class="imgLink"></a>
 
-                    <a href="https://www.twitter.com" target="_blank"><img src="/GallucciNahuel/imagenes/logos/redes sociales/twiter.png" alt="twiter" class="imgLink"></a>
+                    <a href="https://www.twitter.com" target="_blank"><img src="../..//GallucciNahuel/imagenes/logos/redes sociales/twiter.png" alt="twiter" class="imgLink"></a>
 
-                    <a href="https://www.instagram.com" target="_blank"><img src="/GallucciNahuel/imagenes/logos/redes sociales/instagram.png" alt="instagram" class="imgLink"></a>
+                    <a href="https://www.instagram.com" target="_blank"><img src="../..//GallucciNahuel/imagenes/logos/redes sociales/instagram.png" alt="instagram" class="imgLink"></a>
 
-                    <a href="https://www.whatsapp.com" target="_blank"><img src="/GallucciNahuel/imagenes/logos/redes sociales/whatsapp.png" alt="whatsapp" class="imgLink"></a>          
+                    <a href="https://www.whatsapp.com" target="_blank"><img src="../..//GallucciNahuel/imagenes/logos/redes sociales/whatsapp.png" alt="whatsapp" class="imgLink"></a>          
             </div>
             </div>
             <div class="copy">
