--- a/GallucciNahuel/html/blog.html
+++ b/GallucciNahuel/html/blog.html
@@ -31,7 +31,7 @@
             <section class="blogCardContainer">   
                 <div class="cardBlog">
                     <h2 class="blogCardTexto">
-                        <a href="../../GallucciNahuel/codigo/html/comoCurarTuEssen.html" target="_blank">Como curar tus Essen
+                        <a href="./GallucciNahuel/codigo/html/comoCurarTuEssen.html" target="_blank">Como curar tus Essen
                         </a>
                     </h2>
                     <div class="cardBlogImagen">
@@ -40,7 +40,7 @@
     
                 <div class="cardBlog">
                     <h2 class="blogCardTexto">
-                        <a href="../../GallucciNahuel/codigo/html/HistoriaDeEssen.html" target="_BLANK">Historia de Essen
+                        <a href="./GallucciNahuel/codigo/html/HistoriaDeEssen.html" target="_BLANK">Historia de Essen
                         </a>
                     </h2>
                     <div class="cardBlogImagen">
